# moodring

./: .bazelrc  .gitignore  .travis.yaml  .travis.yml  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-tekton-commit-status-tracker  bazel-testlogs  deps.bzl  go.mod  go.sum  justfile  tools.go
cmd/: BUILD.bazel  main.go
cmd/manager/: BUILD.bazel  main.go
deploy/: operator.yaml  role.yaml  role_binding.yaml  service_account.yaml
pkg/controller/: BUILD.bazel  add_pipelinerun.go
pkg/controller/pipelinerun/: BUILD.bazel  annotations.go  client.go  commit_status_input.go  commit_status_input_test.go  notifiable_test.go  pipelinerun_controller.go  pipelinerun_controller_test.go  resource.go  resource_test.go  run_state.go  run_state_test.go  secret.go  secret_test.go
version/: BUILD.bazel
