load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/digital-plumbers-union/tekton-commit-status-tracker/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/controller/pipelinerun:go_default_library",
        "//version:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@com_github_tektoncd_pipeline//pkg/apis/pipeline/v1alpha1:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/config:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager/signals:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "container",
    embed = [":go_default_library"],
)

container_push(
    name = "push-container",
    format = "Docker",
    image = ":container",
    registry = "index.docker.io",
    repository = "dpush/moodring",
    tag = "latest",
    stamp = False,
)
