load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "annotations.go",
        "client.go",
        "commit_status_input.go",
        "notifiable.go",
        "pipelinerun_controller.go",
        "resource.go",
        "run_state.go",
        "secret.go",
    ],
    importpath = "github.com/digital-plumbers-union/tekton-commit-status-tracker/pkg/controller/pipelinerun",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jenkins_x_go_scm//scm:go_default_library",
        "@com_github_jenkins_x_go_scm//scm/driver/github:go_default_library",
        "@com_github_tektoncd_pipeline//pkg/apis/pipeline/v1alpha1:go_default_library",
        "@com_github_tektoncd_pipeline//pkg/apis/resource/v1alpha1:go_default_library",
        "@dev_knative_pkg//apis:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "commit_status_input_test.go",
        "notifiable_test.go",
        "pipelinerun_controller_test.go",
        "resource_test.go",
        "run_state_test.go",
        "secret_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_jenkins_x_go_scm//scm:go_default_library",
        "@com_github_jenkins_x_go_scm//scm/driver/fake:go_default_library",
        "@com_github_tektoncd_pipeline//pkg/apis/pipeline/v1alpha1:go_default_library",
        "@com_github_tektoncd_pipeline//pkg/apis/resource/v1alpha1:go_default_library",
        "@com_github_tektoncd_pipeline//test/builder:go_default_library",
        "@dev_knative_pkg//apis:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library",
    ],
)
